resolved messaging popup on mobile

--- a/src/shared/styles/mobile.scss
+++ b/src/shared/styles/mobile.scss
@@ -13,7 +13,6 @@ z-index: 10005;
 }
 
 .mobile-nav {
-display:flex;
 left: 0; 
 top: 0;  
 width: 100%; 
